fix: remove overflow x from body

--- a/style.css
+++ b/style.css
@@ -613,7 +613,7 @@ button > span {
   }
 
   body {
-    overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   header > div > section  {
